// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly a11y renders correctly with a11y props (false) 1`] = `
<button
  aria-controls="area"
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup={false}
  aria-label="text"
  aria-labelledby="id"
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly a11y renders correctly with a11y props (true) 1`] = `
<button
  aria-controls="area"
  aria-disabled={false}
  aria-expanded={true}
  aria-haspopup={true}
  aria-label="text"
  aria-labelledby="id"
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- negative 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorNegative monday-style-button--color-negative clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- on-inverted-background 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorOnInvertedBackground monday-style-button--color-on-inverted-background clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- on-primary-color 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorOnPrimaryColor monday-style-button--color-on-primary-color clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- positive 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPositive monday-style-button--color-positive clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button color- primary 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- primary 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- secondary 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindSecondary monday-style-button--kind-secondary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button kind- tertiary 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindTertiary monday-style-button--kind-tertiary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- large 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeLarge monday-style-button--size-large kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- medium 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders Button size- small 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeSmall monday-style-button--size-small kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with callbacks 1`] = `
<button
  aria-disabled={false}
  className="test button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with className 1`] = `
<button
  aria-disabled={false}
  className="test button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with empty props 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with id 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button_test"
  id="test"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with leftIcon 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <div
    data-testid="icon-mock"
  />
  Button
</button>
`;

exports[`Button renders correctly renders correctly with props change ui 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary colorPrimaryActive monday-style-button--color-primary-active marginRight monday-style-button--margin-right marginLeft monday-style-button--margin-left rightFlat monday-style-button--right-flat leftFlat monday-style-button--left-flat clickAnimation noSidePadding monday-style-button--no-side-padding"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Button renders correctly renders correctly with rightIcon 1`] = `
<button
  aria-disabled={false}
  className="button monday-style-button sizeMedium monday-style-button--size-medium kindPrimary monday-style-button--kind-primary colorPrimary monday-style-button--color-primary clickAnimation"
  data-testid="button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  Button
  <div
    data-testid="icon-mock"
  />
</button>
`;
